[gd_scene load_steps=6 format=3 uid="uid://dtsg5pjqhf5g6"]

[ext_resource type="Script" path="res://game9/game_9.gd" id="1_acsow"]
[ext_resource type="PackedScene" uid="uid://cya8tdk3metyd" path="res://cone/cone.tscn" id="2_yag7t"]
[ext_resource type="Texture2D" uid="uid://bgrumoxkqgyyg" path="res://Undo-Transparent-Background.png" id="3_53o6i"]
[ext_resource type="Texture2D" uid="uid://5l3hwinkfbuc" path="res://refresh.svg" id="4_p0xej"]
[ext_resource type="Texture2D" uid="uid://dp12le5061li4" path="res://иконка совет.png" id="5_gndpx"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_acsow")

[node name="Cone" parent="." instance=ExtResource("2_yag7t")]
position = Vector2(62, 350)

[node name="Cone2" parent="." instance=ExtResource("2_yag7t")]
position = Vector2(146, 350)

[node name="Cone3" parent="." instance=ExtResource("2_yag7t")]
position = Vector2(228, 350)

[node name="Cone4" parent="." instance=ExtResource("2_yag7t")]
position = Vector2(313, 350)

[node name="Cone5" parent="." instance=ExtResource("2_yag7t")]
position = Vector2(396, 350)

[node name="Cone6" parent="." instance=ExtResource("2_yag7t")]
position = Vector2(62, 590)

[node name="Cone7" parent="." instance=ExtResource("2_yag7t")]
position = Vector2(146, 590)

[node name="Cone8" parent="." instance=ExtResource("2_yag7t")]
position = Vector2(228, 590)

[node name="Cone9" parent="." instance=ExtResource("2_yag7t")]
position = Vector2(316, 590)

[node name="Cone10" parent="." instance=ExtResource("2_yag7t")]
visible = false
position = Vector2(397, 590)

[node name="ButtonUndo" type="Button" parent="."]
offset_left = 7.0
offset_top = 6.0
offset_right = 80.0
offset_bottom = 71.0
theme_override_font_sizes/font_size = 25

[node name="Sprite2D" type="Sprite2D" parent="ButtonUndo"]
position = Vector2(33.5, 34)
scale = Vector2(0.0642857, 0.0608696)
texture = ExtResource("3_53o6i")

[node name="ButtonHint" type="Button" parent="."]
offset_left = 370.0
offset_top = 6.0
offset_right = 445.0
offset_bottom = 72.0

[node name="Sprite2D" type="Sprite2D" parent="ButtonHint"]
position = Vector2(37.5, 33)
scale = Vector2(0.09375, 0.085)
texture = ExtResource("4_p0xej")

[node name="Button3" type="Button" parent="."]
offset_left = 380.0
offset_top = 727.0
offset_right = 439.0
offset_bottom = 788.0

[node name="Sprite2D" type="Sprite2D" parent="Button3"]
position = Vector2(29, 30)
scale = Vector2(0.0787879, 0.0721428)
texture = ExtResource("5_gndpx")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 128.0
offset_top = 115.0
offset_right = 339.0
offset_bottom = 157.0
theme_override_font_sizes/font_size = 30
text = "Вы победили!"

[node name="ButtonMix" type="Button" parent="."]
visible = false
offset_left = 129.0
offset_top = 443.0
offset_right = 332.0
offset_bottom = 493.0
theme_override_font_sizes/font_size = 30
text = "Перемешать"

[connection signal="on_click" from="Cone" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone2" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone3" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone4" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone5" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone6" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone7" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone8" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone9" to="." method="_on_cone_on_click"]
[connection signal="on_click" from="Cone10" to="." method="_on_cone_on_click"]
[connection signal="pressed" from="ButtonUndo" to="." method="_on_button_undo_pressed"]
[connection signal="pressed" from="ButtonHint" to="." method="_on_button_hint_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ButtonMix" to="." method="_on_button_mix_pressed"]
